# csad2526ki405vaskevycholeh3

./: CMakeLists.txt  Copilot-logs1.txt  Copilot-logs2.txt  Copilot-logs3.txt  Copilot-logs4.txt  Copilot-logs5.txt  README.md  ci.sh  math_operations.h
.github/workflows/: ci.yml
src/: spi_master_rx.vhd  spi_master_tx.vhd
tests/: unit_tests.cpp
